# myFirstOPENGlWindow

./: CMakeLists.txt
.cache/clangd/index/: glad.c.22848C25EAD74825.idx  glad.h.F8FC7CB3D8FFFB0A.idx  glfw3.h.89C5FE32266C9F97.idx  khrplatform.h.C511D5038DF345E0.idx  mtyps.hpp.EEF1B7DB41EF01E8.idx  shader.hpp.EC5905997B561CFA.idx  tt.cpp.EC41638C56B7076F.idx
include/glad/: glad.h
include/mtyps/: mtyps.hpp
include/shader/: shader.hpp
shaders/: fragment.glsl  vertex.glsl
src/: glad.c  tt.cpp
